Updated page width to 1024 to fix spacing issue on iPad

--- a/2015/scss/main.scss
+++ b/2015/scss/main.scss
@@ -14,6 +14,7 @@ $nav-link-color: #656565;
 16px = 1em
 14px = 0.875em
 13px = 0.813em
+12px = 0.750em
 24px = 1.5em
 */
 
@@ -56,6 +57,10 @@ body {
 UL {
   margin:0;
   padding: 0;
+}
+
+h1 {
+  font-size: 1em;
 }
 
 h2, h3, p {
@@ -143,7 +148,7 @@ h3 {
   }
 
   h2 {
-    max-width: 494px;
+    max-width: 602px;
     text-transform: uppercase;
   }
 }
@@ -173,9 +178,10 @@ h3 {
 
 nav {
   height: 45px;
-  border-bottom: 1px solid $link-color;
   display: inline-block;
   float: left;
+  letter-spacing: -0.2px;
+  margin-top: 9px;
   //border: 1px solid red;
 
 /*  @media only screen
@@ -188,15 +194,16 @@ nav {
     display: none;
   }
   ul {
-    //border: 1px solid green;
+    border-bottom: 1px solid $link-color;
   }
   li {
     display: inline-block;
     list-style: none;
     margin-left: 7px;
+    line-height: 1.7em;
     a {
       display: inline-block;
-      line-height: 3.3em;
+      line-height: 2em;
       font-size: 0.813em;
       color: $nav-link-color;
       text-decoration: none;
@@ -218,11 +225,15 @@ nav {
 #buttonBlock {
   float: right;
   text-align: right;
+  width: 100%;
+  margin-bottom: 2em;
   .btn {
     float: left;
+    width: 40%;
   }
   .btn-a {
     margin-left: 10px;
+    float: right;
   }
 
   @media only screen
@@ -278,6 +289,51 @@ nav {
 #submit {
   width: 100%;
   clear: both;
+  border: 1px solid #c8c8ca;
+  position: relative;
+  margin-bottom: 2em;
+  h2 {
+    background: white;
+    position: absolute;
+    top: -16px;
+    left: 11px;
+    padding: 0 6px;
+  }
+}
+
+#formDiv {
+  width: 100%;
+  margin: 35px 0;
+}
+
+form {
+  margin: 7px 0px;
+
+  label {
+    float: left;
+    font-weight: bold;
+    font-size: 11px;
+    padding-top: 4px;
+    width: 64px;
+    text-align: right;
+    padding-left: 14px;
+  }
+  input {
+    margin: 0 0 12px 16px;
+    width: 59%;
+  }
+  input.submitButton {
+    width: auto;
+    float: right;
+    margin-top: 1px;
+    margin-right: -1px;
+  }
+}
+#emailError {
+  display: none;
+  text-align: right;
+  margin: -10px 0 10px;
+  color: #B94A48;
 }
 
 #jobsWidget {
@@ -295,11 +351,16 @@ nav {
 
 #job-listings {
   position: relative;
+  h2 {
+    margin-top: 1.3em;
+    margin-bottom: .3em;
+  }
   li {
     list-style: none;
   }
   p {
     margin-bottom: 1em;
+    font-size: .750em;
   }
 }
 
@@ -311,6 +372,7 @@ nav {
   a {
     color: $link-color;
     text-decoration: none;
+    font-size: .875em;
     &:hover {
       text-decoration: underline;
     }
@@ -320,4 +382,51 @@ nav {
 .more,
 .submitButton {
   float: right;
+}
+
+
+.blog {
+
+  h2 {
+    margin: 0 0 9px 0;
+    letter-spacing: 1.3px;
+    span {
+      font-size: .8em;
+    }
+  }
+
+  .entry-title {
+    margin: 0;
+    a {
+      color: $h3-color;
+      font-size: 1em;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  p {
+    font-size: .750em;
+
+    a {
+      text-decoration: none;
+      color: $link-color;
+      display: inline-block;
+      margin-bottom: 2em;
+    }
+
+    span.meta-nav {
+      display: none;
+      //text-decoration: inherit;
+    }
+
+  }
+
+  &.full-page {
+    .digg_digg {
+      display: none;
+    }
+  }
 }
